[tool.poetry]
name = "Mark"
version = "0.0.0"
description = "Never write a single line of HTML anymore! A modern markup language for the 21st century"
authors = ["baris-inandi <68742481+baris-inandi@users.noreply.github.com>"]
license = "GPL-2.0-or-later"
repository = "https://github.com/baris-inandi/mark"
documentation = "example.com/docs"
keywords = [
	"Markup",
	"Markup Language",
	"HTML",
	"Marklang",
	"Mark-lang",
	"Mark markup language"
]
packages = [
	{ include = "mark-python" }
]

[tool.poetry.dependencies]
python = "^3.9"
rcssmin = "^1.1.0"
rjsmin = "^1.2.0"
libsass = "^0.21.0"
lesscpy = "^0.15.0"
six = "^1.16.0"
termcolor = "^1.1.0"
Markdown = "^3.3.6"
htmlmin = "^0.1.12"
livereload = "^2.6.3"
pyinotify = "^0.9.6"
websockets = "^10.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
bandit = "^1.7.2"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/baris-inandi/mark/issues"
